Default goal added: now the project can be just built with "mvn"

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         </dependency>
     </dependencies>
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
