artifact id changed

--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.airhacks</groupId>
-    <artifactId>javaee-essentials-pom</artifactId>
-    <version>1.0</version>
+    <artifactId>javaee7-essentials-pom</artifactId>
+    <version>7.0</version>
     <url>http://airhacks.com</url>
     <packaging>war</packaging>
     <dependencies>
