--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     <groupId>com.airhacks</groupId>
     <artifactId>javaee7-essentials-pom</artifactId>
     <version>7.0</version>
-    <url>http://airhacks.com</url>
     <packaging>war</packaging>
     <dependencies>
         <dependency>
@@ -14,17 +13,9 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    <build>
-        <defaultGoal>clean install</defaultGoal>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
 </project>
