--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,12 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>${artifactId}</finalName>
+    </build>
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 </project>
